--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav id="mainNavBar" class="nav-bar">
         <ul>
             <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#produtos">Produtos</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
             <li><a href="#institucional">Institucional</a></li>
             <li><a href="#Sustentabilidade">Sustentabilidade</a></li>
             <li><a href="#Unidades">Unidades</a></li>
@@ -31,8 +31,18 @@
       </nav>
     </header>
 
-    <section id="inicio"></section>
+    <main>
+        <section class="inicio">
+            <div class="container">
+                <div class="main-menu">
+                    <h1>Liderança e Qualidade em Cítricos para o teu Mundo</h1>
+                    <p>Desde o campo até a sua mesa, excelência em cada etapa.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="script/header.js"></script>
+
   </body>
 </html>
